--- a/index.html
+++ b/index.html
@@ -14,34 +14,6 @@
         <img src="resources/img/Yvonne-Treatment-Abroad.jpg" alt="Yvonne's Treatment Abroad Fundraiser Banner" class="img-fluid">
         <div class="row" id="main-desc">
             <div class="col-sm-12 my-4">
-                <h1>Yvonne's Story</h1>
-                <hr class="my-2 hr-custom">
-                <p class="my-2">
-                    In August 2024, just six weeks after giving birth to our wonderful daughter Fiadh, my wife Yvonne was diagnosed with Stage 4
-                    colorectal cancer. We started her treatment journey in Ireland after she was given a poor prognosis and told to try chemotherapy. 
-                    Unfortunately, this is just an attempt to prolong her life without any hope of remission, and it hasn't really worked out so far,
-                    with her condition worsening.<br>
-                </p>
-                <!-- Button trigger modal -->
-                <button type="button" class="btn custom-button mt-4" data-bs-toggle="modal" data-bs-target="#story">
-                    Read more
-                    <div class="icon">
-                        <svg
-                        height="24"
-                        width="24"
-                        viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg"
-                        >
-                        <path d="M0 0h24v24H0z" fill="none"></path>
-                        <path
-                            d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
-                            fill="currentColor"
-                        ></path>
-                        </svg>
-                    </div>
-                </button>
-            </div>
-            <div class="col-sm-12 my-4">
                 <h1>Last Man Standing</h1>
                 <hr class="my-2 hr-custom">
                 <p class="my-2">
@@ -51,13 +23,18 @@
                     Select a team each week playing in the Premier League and hopefully they win. The competition continues
                     until one player is left standing against all the odds!
                 </p>
-                <h2 class="fs-4 fst-italic my-1">Division of funds</h2>
+                <h2 class="fs-4 fst-italic my-1">Prize Pool! 🎉</h2>
                 <hr class="my-1 hr-custom-sm">
                 <p>
-                    All funds raised through the Last Man Standing competition will see monies divided 50/50 between
-                    Yvonne's Go Fund Me and the overall winners of the competition.
+                    There will be a guaranteed winner of €1,500 at the end of the round!
                 </p>
-                <button type="button" class="btn custom-button mt-4">
+                <button type="button" class="btn custom-button mt-4" data-bs-toggle="modal" data-bs-target="#terms">
+                    Terms & Conditions
+                    <div class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M192 112L304 112L304 200C304 239.8 336.2 272 376 272L464 272L464 512C464 520.8 456.8 528 448 528L192 528C183.2 528 176 520.8 176 512L176 128C176 119.2 183.2 112 192 112zM352 131.9L444.1 224L376 224C362.7 224 352 213.3 352 200L352 131.9zM192 64C156.7 64 128 92.7 128 128L128 512C128 547.3 156.7 576 192 576L448 576C483.3 576 512 547.3 512 512L512 250.5C512 233.5 505.3 217.2 493.3 205.2L370.7 82.7C358.7 70.7 342.5 64 325.5 64L192 64zM248 320C234.7 320 224 330.7 224 344C224 357.3 234.7 368 248 368L392 368C405.3 368 416 357.3 416 344C416 330.7 405.3 320 392 320L248 320zM248 416C234.7 416 224 426.7 224 440C224 453.3 234.7 464 248 464L392 464C405.3 464 416 453.3 416 440C416 426.7 405.3 416 392 416L248 416z" fill="currentColor"/></svg>
+                    </div>
+                </button>
+                <button type="button" class="btn custom-button mt-4" data-bs-toggle="modal" data-bs-target="#register">
                     Sign-up here
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M451 292.3C446.6 289.5 443.4 285.3 441.8 280.4C440.2 275.5 440.4 270.2 442.3 265.4L475.6 182C455.7 159.6 431 141.5 403.2 129.3L334.1 186.9C330.1 190.2 325.1 192 320 192C314.9 192 309.8 190.2 305.9 186.9L236.8 129.3C209 141.5 184.3 159.6 164.4 182L197.8 265.4C199.7 270.2 199.9 275.5 198.3 280.4C196.7 285.3 193.4 289.5 189.1 292.3L113 340.2C116 371.1 125.7 399.9 140.6 425.4L230.3 419.4C235.5 419.1 240.6 420.5 244.8 423.6C249 426.7 252 431 253.2 436.1L275.2 523.3C289.6 526.5 304.6 528.1 320 528.1C335.4 528.1 350.3 526.4 364.8 523.3L386.8 436.1C388.1 431.1 391 426.7 395.2 423.6C399.4 420.5 404.5 419.1 409.7 419.4L499.4 425.4C514.4 400 524.1 371.1 527 340.3L451 292.3zM320 64C461.4 64 576 178.6 576 320C576 461.4 461.4 576 320 576C178.6 576 64 461.4 64 320C64 178.6 178.6 64 320 64zM382 285C390.4 291.1 393.9 301.9 390.7 311.8L372.4 368.1C369.2 378 360 384.7 349.6 384.7L290.4 384.7C280 384.7 270.8 378 267.6 368.1L249.3 311.8C246.1 301.9 249.6 291.1 258 285L305.9 250.2C314.3 244.1 325.7 244.1 334.1 250.2L382 285z" fill="currentColor"/></svg>
@@ -65,13 +42,10 @@
                 </button>
             </div>
             <div class="col-sm-12 my-4">
-                <h1>Raised to date</h1>
+                <h1>Yvonne's Story!</h1>
                 <hr class="my-2 hr-custom">
                 <p>
-                    We have already done two-trips over to Germany and our donation goal has changed as more trips are needed
-                    for Yvonne. The support we have received to date has been incredible and we couldn't be more thankful.<br>
-                    Gavin spoke on WLR FM in July of 2025, and told of the pursuit of advanced treatment abroad.<br>
-                    <a href="https://irepod.com/podcast/deise-today/a-mother-s-battle-waterford-woman-yvonne-daniels-b" rel="noopener" target="_blank" class="link">🔊 <span>Listen here</span> 🔗</a>
+                    <a href="story.html" rel="noopener" class="link">Click here to read about Yvonne's Story!</a>
                 </p>
                 <p>
                     If you would like to donate direct to the GoFundMe and not take part in this Last Man Standing Competition please click on the button below:
@@ -85,28 +59,80 @@
         </div>
     </section>
 
-    <!-- Modal -->
-    <div class="modal fade" id="story" tabindex="-1" aria-labelledby="storyLabel" aria-hidden="true">
+    <!-- Modals -->
+    <div class="modal fade" id="terms" tabindex="-1" aria-labelledby="termsLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Read Yvonne's Story</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Terms & Conditions</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <p>
-                        There are currently few options for additional chemotherapy in Ireland, but after doing a lot of research and speaking with other cancer
-                        patients, we have found treatments in Germany that have shown a lot of promise and potential. Some patients have experienced remission,
-                        while others have seen a significant reduction in their disease and symptoms.<br>
-                        This treatment however comes at a great cost, which for us alone is far out of reach financially.<br>
-                        By hosting this Last Man Standing Competition, our goal is to keep Yvonne with us to see her two beautiful babies grow up so we are asking
-                        for your help. This will be used to fund treatment, travel and cover costs of having to take time off work, of which we are already on a
-                        reduced income.<br>
+                        The Terms & Conditions for this Last Man Standing Competition are as follows:
                     </p>
+                    <ul id="terms-list">
+                        <li>
+                            <em>Selection Process:</em> Each participant must pick
+                            one team to win in each weekly round of fixtures.
+                            If the selected team wins, the participant progresses
+                            to the next round. Lose/Draw and the participant is 
+                            eliminated from the remainder of the competition.
+                        </li>
+                        <li>
+                            <em>Unique Selections:</em> Once a team has been selected
+                            it cannot be chosen again for the duration of the 
+                            competition. This means participants must strategise 
+                            their picks carefully as the competition progresses. If 
+                            a team is selected a second time an email will be 
+                            returned, notifying you, and you will be prompted to 
+                            pick another team.
+                        </li>
+                        <li>
+                            <em>Deadline for picks:</em> Participants must make their weekly selections 1hour before kick-off of the first fixture of that gameweek. If a selection is not
+                            made in time, the system will assign a random team from
+                            that participant's remaining team picks.
+                        </li>
+                        <li>
+                            <em>Matches:</em> If a match that is due to be played is
+                            postponed or cancelled, the participant will
+                            automatically advance, but that team will no longer be
+                            available for future selections.
+                        </li>
+                        <li>
+                            <em>End of Competition:</em> The competition continues
+                            until only one participant remains with a winning record.
+                            If all participants are eliminated in a round, that 
+                            round ends without a winner, and a new round may be 
+                            created.
+                        </li>
+                        <li>
+                            <em>Agreeing to T's & C's:</em> By registering into this
+                            Last Man Standing Competition, you are agreeing to the Terms
+                            and Conditions as they are presented.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="register" tabindex="-1" aria-labelledby="registerLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Sign-up to play!</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
                     <p>
-                        Much love, Gavin and Yvonne ♥. Please dig deep and help keep this amazing wife, mother, and friend with us for years to come.
+                        By registering you agree to the Terms & Conditions of this
+                        Last Man Standing Competition.<br>
+                        An email will be sent to you once you register with a link for
+                        payment. Minimum entry donation is set at €10 (10 Euros). If you do not pay before our go-live date, you will not be eligible to play!
                     </p>
-                    <img src="resources/img/daniels_christmasPhoto.jpg" alt="The Daniel's Christmas Photo" class="img-fluid rounded-img">
+                    <!-- registration form here -->
+                     
                 </div>
             </div>
         </div>
