updates to index & story.html pages

--- a/story.html
+++ b/story.html
@@ -53,11 +53,27 @@
                 <p>
                     If you would like to donate direct to the GoFundMe and not take part in this Last Man Standing Competition please click on the button below:
                 </p>
-                <div class="row my-2">
+                <div class="row my-4">
                     <div class="col-12 my-auto">
                         <div class="gfm-embed" data-url="https://www.gofundme.com/f/yvonnes-treatment-abroad/widget/medium?sharesheet=undefined&attribution_id=sl:f3cb75df-f7c4-441a-a148-f260f58f1058"></div>
                     </div>
                 </div>
+            </div>
+            <div class="col-sm-12 my-4">
+                <h1 class="fs-5">Contact Us</h1>
+                <hr class="my-2 hr-custom">
+                <p>
+                    If you have any issues, you can reach us using the below:
+                </p>
+                <p>
+                    <a href="mailto:gavindaniels86@hotmail.com" rel="noopener noreferrer" class="link"><span>By Email</span> 📧</a>
+                </p>
+                <p>
+                    <a href="tel:+353861629797" rel="noopener noreferrer" class="link"><span>By Phone</span> 📲</a>
+                </p>
+                <p>
+                    <a href="index.html" rel="noopener" class="link">Go back to Last Man Standing ⚽</a>
+                </p>
             </div>
         </div>
     </section>
