--- a/index.html
+++ b/index.html
@@ -56,6 +56,19 @@
                     </div>
                 </div>
             </div>
+            <div class="col-sm-12 my-4">
+                <h1 class="fs-5">Contact Us</h1>
+                <hr class="my-2 hr-custom">
+                <p>
+                    If you have any issues, you can reach us using the below:
+                </p>
+                <p>
+                    <a href="mailto:gavindaniels86@hotmail.com" rel="noopener noreferrer" class="link"><span>By Email</span> 📧</a>
+                </p>
+                <p>
+                    <a href="tel:+353861629797" rel="noopener noreferrer" class="link"><span>By Phone</span> 📲</a>
+                </p>
+            </div>
         </div>
     </section>
 
@@ -132,7 +145,7 @@
                         payment. Minimum entry donation is set at €10 (10 Euros). If you do not pay before our go-live date, you will not be eligible to play!
                     </p>
                     <!-- registration form here -->
-                     
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScKXS3QjHi52VxajxQ-Mnlit13hbU5aq8qdki5tHzpzC07i0A/viewform?embedded=true" width="100%" height="824" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div>
             </div>
         </div>
