update to index.html adding the game week information and team selection

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                     treatment abroad for Yvonne. Minimum entry donation is set at €10 (10 Euros) and automatically enters
                     you to play in our Competition.<br>
                     Select a team each week playing in the Premier League and hopefully they win. The competition continues
-                    until one player is left standing against all the odds!
+                    until one player is left standing against all the odds!<br>
+                    Once Registered, you will get an email with instructions on how to select your teams prior to Game Week 1!<br>
+                    Game Week 1 is starting the 22nd of November 2025. Register, pay, and get your teams in ASAP!
                 </p>
                 <h2 class="fs-4 fst-italic my-1">Prize Pool! 🎉</h2>
                 <hr class="my-1 hr-custom-sm">
@@ -143,6 +145,9 @@
                         Last Man Standing Competition.<br>
                         An email will be sent to you once you register with a link for
                         payment. Minimum entry donation is set at €10 (10 Euros). If you do not pay before our go-live date, you will not be eligible to play!
+                    </p>
+                    <p>
+                        Once paid, you will get an email with instructions on how to select your teams prior to Game Week 1! Game Week 1 in our competition is kicking off on the 22nd November 2025.
                     </p>
                     <!-- registration form here -->
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScKXS3QjHi52VxajxQ-Mnlit13hbU5aq8qdki5tHzpzC07i0A/viewform?embedded=true" width="100%" height="824" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
