removed gfm embed link

--- a/story.html
+++ b/story.html
@@ -42,7 +42,7 @@
                 </button>
             </div>
             <div class="col-sm-12 my-4">
-                <h1>Raised to date</h1>
+                <h1>Medical Care Abroad</h1>
                 <hr class="my-2 hr-custom">
                 <p>
                     We have already done two-trips over to Germany and our donation goal has changed as more trips are needed
@@ -50,14 +50,6 @@
                     Gavin spoke on WLR FM in July of 2025, and told of the pursuit of advanced treatment abroad.<br>
                     <a href="https://irepod.com/podcast/deise-today/a-mother-s-battle-waterford-woman-yvonne-daniels-b" rel="noopener" target="_blank" class="link">🔊 <span>Listen here</span> 🔗</a>
                 </p>
-                <p>
-                    If you would like to donate direct to the GoFundMe and not take part in this Last Man Standing Competition please click on the button below:
-                </p>
-                <div class="row my-4">
-                    <div class="col-12 my-auto">
-                        <div class="gfm-embed" data-url="https://www.gofundme.com/f/yvonnes-treatment-abroad/widget/medium?sharesheet=undefined&attribution_id=sl:f3cb75df-f7c4-441a-a148-f260f58f1058"></div>
-                    </div>
-                </div>
             </div>
             <div class="col-sm-12 my-4">
                 <h1 class="fs-5">Contact Us</h1>
